# nsu_labs_1st_year

./: README.md
1st semester/lab0/: CMakeLists.txt  README.md
1st semester/lab0/src/: main.c
1st semester/lab0/test/: testlab0
1st semester/lab1-0/: CMakeLists.txt  README.md
1st semester/lab1-0/src/: main.c
1st semester/lab1-1/: CMakeLists.txt  README.md
1st semester/lab1-1/src/: main.c
1st semester/lab1-1/test/: testlab1-1
1st semester/lab2/: CMakeLists.txt  README.md
1st semester/lab2/src/: main.c
1st semester/lab2/test/: testlab2
1st semester/lab3-0/: CMakeLists.txt  README.md
1st semester/lab3-0/src/: main.c
1st semester/lab3-0/test/: testlab3-0
1st semester/lab3-1/: CMakeLists.txt  README.md
1st semester/lab3-1/src/: main.c
1st semester/lab4/: CMakeLists.txt  README.md
1st semester/lab4/src/: main.c
2nd semester/lab5/: CMakeLists.txt  README.md
2nd semester/lab5/src/: bit_operations.c  bit_operations.h  char_to_bits_converter.py  compress.c  compress.h  decompress.c  decompress.h  huffman_tree.c  huffman_tree.h  main.c  printing_in_file.c  printing_in_file.h  scanning_file.c  scanning_file.h
2nd semester/lab5/test/: testlab5
2nd semester/lab6-0/: CMakeLists.txt  README.md
2nd semester/lab6-0/src/: avl_tree.c  avl_tree.h  main.c
2nd semester/lab6-0/test/: testlab6-0
2nd semester/lab6-1/: CMakeLists.txt  README.md
2nd semester/lab6-1/src/: main.c  savemeee.c
2nd semester/lab7/: CMakeLists.txt  README.md
2nd semester/lab8-0/: CMakeLists.txt  README.md
2nd semester/lab9/: CMakeLists.txt  README.md
(+8 files in other folders)
